--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -21,5 +21,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
       - name: Get new data
+        env: 
+            DROPBOX_REFRESH_TOKEN: ${{ secrets.DROPBOX_REFRESH_TOKEN }}
+            INGATLAN_APP_SECRET: ${{ secrets.INGATLAN_APP_SECRET }}
         run: |
           inv upload-new-data
